# chemtk

./: .gitignore  .travis.yml  AUTHORS  Doxyfile  INSTALL  Makefile  Makefile.am  README.md  TODO.md  _config.yml  bootstrap  configure.ac  index.html  out.txt  params.json  scicalc.c  stack.c  stack.h
_posts/: 2015-08-15-todo.md
data/: Makefile.am  commands.bnf.txt  commands.cf  commands.txt  commands.yml  data.h  data.tar.xz  pager.txt
data/commands-lbnf/: commands.cf
data/elements/info/: ac  ag  ar  at  ba  bh  bi  bk  br  c  ca  ce  cl  co  cr  db  ds  dy  er  es  f  fl  fm  ge  h  he  hg  ho  i  in  ir  k  la  lr  lu  md  mn  mo  n  nb  (+30 more)
data/elements/ptable/: ar  as  at  ba  bi  br  ca  ce  cf  co  cs  db  dy  eu  f  fe  fm  ga  gd  hf  hg  k  kr  la  li  lu  lv  md  mg  mo  mt  nb  ne  ni  no  np  o  pb  po  pu  (+19 more)
data/elements/ptable.bak/: ac  al  am  au  b  be  br  cd  ce  cl  co  cr  cu  db  ds  dy  eu  f  fl  fm  fr  ga  h  hf  ho  i  ir  k  kr  md  mn  na  ne  no  o  pa  pb  pd  pt  ra  (+18 more)
data/elements/test/: clean.ed  ptableize.ed
doc/: Makefile.am  constants.txt  customdoxygen.css  scicalc.txt
doc/commands/: Makefile.am  cmd-tree.dvi  cmd-tree.tex  command_specification.tex  commands.bnf.txt
doc/doxygen/: Doxyfile  Doxyfile.in  Makefile.am  doxygen_files.make
doc/elements/: clean.ed  ptable.txt
doc/elements/info/: al  am  as  au  b  be  cd  cf  cm  cn  cs  cu  eu  fe  fr  ga  gd  hf  hs  kr  li  lv  mg  mt  na  nd  ne  ni  no  o  p  pb  pt  re  rg  rh  sc  se  tc  th  (+8 more)
doc/elements/ptable/: ac  ag  al  am  au  b  be  bh  bk  c  cd  cl  cm  cn  cr  cu  ds  er  es  fl  fr  ge  h  he  ho  hs  i  in  ir  lr  mn  n  na  nd  os  p  pa  pd  pm  pr  (+19 more)
doc/elements/ptable.bak/: ag  ar  as  at  ba  bh  bi  bk  c  ca  cf  cm  cn  cs  er  es  fe  gd  ge  he  hg  hs  in  la  li  lr  lu  lv  mg  mo  mt  n  nb  nd  ni  np  os  p  pm  po  (+20 more)
doc/elements/test/: h.html.txt
man/: Makefile.am  chemtk.1  chemtkrc.5
src/: Directories.am  Makefile.am  arguments.h  check_chemtk.c  check_chemtk.h  chemtk.c  chemtk.h  cli.c  cli.h  command.c  command.h  config.h  constant.c  constant.h  constants.c  constants.h  directory.c  directory.h  dirs.h  element.c  element.h  elements.c  elements.h  input.c  input.h  ldmath.c  ldmath.h  num_str.c  num_str.h  operator.c  operator.h  pager.c  pager.h  parse.c  parse.h  runtests.c  runtests.h  scicalc.c  scicalc.h  stack.c  (+6 more)
src/commands/: Makefile.am  command_commands.c  command_commands.h  command_interface.h  element_commands.c  element_commands.h  token_interface.h
