if HAVE_PDFLATEX

CMDSPECBNF     = commands.bnf.txt
CMDSPECNAME    = command_specification
CMDSPECTEXSRC  = $(CMDSPECNAME).tex
CMDSPECAUX     = $(CMDSPECNAME).aux
CMDSPECLOG     = $(CMDSPECNAME).log
CMDSPECPDF     = $(CMDSPECNAME).pdf
docfiles       = $(CMDSPECPDF)
CLEANFILES     = $(CMDSPECPDF) $(CMDSPECAUX) $(CMDSPECLOG)
DISTCLEANFILES = $(CLEANFILES)
dist_doc_DATA  = $(CMDSPECTEXSRC) $(docfiles) $(CMDSPECBNF)

$(CMDSPECPDF): $(srcdir)/$(CMDSPECTEXSRC)
	$(PDFLATEX) $<

endif

